# peloton-analytics-databricks

./: .env.example  .gitignore  README.md  databricks.yml  pyproject.toml  requirements.txt
databricks/: run_pipeline.py
databricks/notebooks/: 00_setup.py  01_data_ingestion.py  02_data_governance.py  03_bi.py  04_ml.py  05_workflow_orchestration.py  06_scoring.py
databricks/resources/: peloton_lakehouse_pipeline.yml  peloton_workout_scoring.yml
databricks/sql/: bi_queries.sql
databricks/workflows/: peloton_lakehouse_job.json
sql/: analytics_views.sql  create_tables.sql  lakehouse_objects.sql
src/peloton_databricks_pipeline/: __init__.py  config.py  databricks_loader.py  databricks_spark_loader.py  lakehouse.py  ml.py  peloton_api.py  pipeline.py  scoring.py  transform.py
