[project]
name = "peloton-databricks-pipeline"
version = "0.1.0"
description = "Peloton to Databricks ingestion and ML insights pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "pandas>=2.2.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "databricks-sql-connector>=3.4.0",
  "scikit-learn>=1.5.0",
  "numpy>=1.26.0",
  "joblib>=1.4.0"
]

[project.scripts]
peloton-pipeline = "peloton_databricks_pipeline.pipeline:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
